[package]
name = "trisolve_async"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.6"
futures = { version = "0.3.*" }
tokio = {version = "0.2.*", features = ["full"] }
test-case = "2.2.2"
