[package]
name = "trisolve_async"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.*"
futures = { version = "0.3.*" }
tokio = {version = "1.26.0", features = ["full"] }
test-case = "3.0.0"
async_dag = "0.1.2"
async-mutex = "*"